# magic-rust

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
mtg_api/: Cargo.toml
mtg_api/src/: lib.rs
mtg_cards/: Cargo.toml
mtg_cards/src/: display_cards.rs  header_cards.rs  lib.rs
src/: main.rs
