[package]
name = "mtg_cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
reqwest = { version = "0.12"}
mtg_api = { version = "*", path = "../mtg_api"}
serde_json = { version = "1.0" }
thiserror = {version = "1.0" }
tokio = { version = "1.37", features = ["full"]}
colored = { version = "2.1.0" }
futures-util = { version = "0.3.3"}